tests/golden/type_errors/function_missing_return_mismatch.cd
fun bad(): number {
  print 1;
}
